--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-
-# Created by https://www.toptal.com/developers/gitignore/api/macos,jupyternotebooks,python,flask
-# Edit at https://www.toptal.com/developers/gitignore?templates=macos,jupyternotebooks,python,flask
+# Created by https://www.toptal.com/developers/gitignore/api/macos,python,jupyternotebook,flask
+# Edit at https://www.toptal.com/developers/gitignore?templates=macos,python,jupyternotebook,flask
 
 ### Flask ###
 instance/*
@@ -57,7 +56,6 @@ htmlcov/
 nosetests.xml
 coverage.xml
 *.cover
-*.py,cover
 .hypothesis/
 .pytest_cache/
 
@@ -69,7 +67,6 @@ coverage.xml
 *.log
 local_settings.py
 db.sqlite3
-db.sqlite3-journal
 
 # Flask stuff:
 instance/
@@ -96,16 +93,12 @@ ipython_config.py
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
 #   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
+#   having no cross-platform support, pipenv may install dependencies that don’t work, or not
 #   install all needed dependencies.
 #Pipfile.lock
 
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow
-__pypackages__/
-
-# Celery stuff
+# celery beat schedule file
 celerybeat-schedule
-celerybeat.pid
 
 # SageMath parsed files
 *.sage.py
@@ -137,19 +130,12 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-# pytype static type analyzer
-.pytype/
-
-### JupyterNotebooks ###
-# gitignore template for Jupyter Notebooks
-# website: http://jupyter.org/
-
+### JupyterNotebook ###
 */.ipynb_checkpoints/*
-
-# IPython
 
 # Remove previous ipynb_checkpoints
 #   git rm -r .ipynb_checkpoints/
+#
 
 ### macOS ###
 # General
@@ -215,12 +201,10 @@ Temporary Items
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
 #   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
+#   having no cross-platform support, pipenv may install dependencies that don’t work, or not
 #   install all needed dependencies.
 
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow
-
-# Celery stuff
+# celery beat schedule file
 
 # SageMath parsed files
 
@@ -236,6 +220,4 @@ Temporary Items
 
 # Pyre type checker
 
-# pytype static type analyzer
-
-# End of https://www.toptal.com/developers/gitignore/api/macos,jupyternotebooks,python,flask
+# End of https://www.toptal.com/developers/gitignore/api/macos,python,jupyternotebook,flask
